--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "loteriaacttec",
-    "host": "127.0.0.1",
+    "username": "uwsefvpvc2f2dy19",
+    "password": "B2EmcsIPR1Q8KTBVFBup",
+    "database": "bchbvkeljplxafzr0bew",
+    "host": "bchbvkeljplxafzr0bew-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   },
   "test": {
