--- a/config/config.json
+++ b/config/config.json
@@ -7,17 +7,17 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "uwsefvpvc2f2dy19",
+    "password": "B2EmcsIPR1Q8KTBVFBup",
+    "database": "bchbvkeljplxafzr0bew",
+    "host": "bchbvkeljplxafzr0bew-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "uwsefvpvc2f2dy19",
+    "password": "B2EmcsIPR1Q8KTBVFBup",
+    "database": "bchbvkeljplxafzr0bew",
+    "host": "bchbvkeljplxafzr0bew-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   }
 }
